--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<br>
 
-	<div class="right">
+	<div class="right"><p>  </p><br>
 		<h1>Best Festival Offers</h1>
 		<p>
 			We are providing best quality materials. We have best quality clothes, shoes for man and womens.
