--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="container">
 	<div class="left">
-		<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\s1.jpg">
+		<img s1.jpg">
 	</div>
 
 
@@ -36,7 +36,7 @@
 			50% Discount!!!
 		</p>
 		<button>Shop</button><br>
-		<img src="images/icon.png">
+		<img src="icon.png">
 	</div>
 </div>
 </header>
@@ -44,23 +44,23 @@
 	<h1>Featured</h1>
 	<div class="wrapper">
 	<div class="box1">
-		<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\e6052c87-81e2-4702-ba3c-7a020d888e15.jpg">
+		<img src="e6052c87-81e2-4702-ba3c-7a020d888e15.jpg">
 		<div class="price">Price: $499</div>
 	</div>
 		<div>
-		<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-12 000428.png">
+		<img src="Screenshot 2023-10-12 000428.png">
 		<div class="price">Price: $2500</div>
 	</div>
 		<div>
-		<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-12 010235.png">
+		<img src="Screenshot 2023-10-12 010235.png">
 		<div class="price">Price: $90</div>
 	</div>
 		<div>
-		<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-12 010311.png">
+		<img src="Screenshot 2023-10-12 010311.png">
 		<div class="price">Price: $free</div>
 	</div>
 		<div>
-		<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\s1.jpg">
+		<img src="s1.jpg">
 		<div class="price">Price: $50</div>
 	</div>
 </div>
@@ -70,27 +70,27 @@
 <section id="man">
 	<div class="man-row">
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-11 235746.png">
+			<img src="Screenshot 2023-10-11 235746.png">
 				<h2>Blue Blazer <br>$599.09</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-12 000515.png">
+			<img src="Screenshot 2023-10-12 000515.png">
 				<h2>3 piece suit<br>$799.69</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-12 000837.png">
+			<img src="Screenshot 2023-10-12 000837.png">
 				<h2>sweatshirt<br>$129.00</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\WhatsApp Image 2023-10-12 at 12.22.46 AM.jpeg">
+			<img src="WhatsApp Image 2023-10-12 at 12.22.46 AM.jpeg">
 				<h2>Denim shirt<br>$200</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\WhatsApp Image 2023-10-12 at 12.22.57 AM.jpeg">
+			<img src="WhatsApp Image 2023-10-12 at 12.22.57 AM.jpeg">
 				<h2>Black sunglasses<br>$50.00</h2>
 			<h3>Add to cart </h3>
 		</div>
