--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="container">
 	<div class="left">
-		<img s1.jpg">
+		<img src="s1.jpg">
 	</div>
 
 
@@ -103,22 +103,22 @@
 
 	<div class="man-row">
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\s1.jpg">
+			<img src="s1.jpg">
 				<h2>oversized t-shirt<br>$99/h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-12 011249.png">
+			<img src="Screenshot 2023-10-12 011249.png">
 				<h2>white shirt<br>$150</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\s1.jpg">
+			<img src="s1.jpg">
 				<h2>!!!!1<br>$129.99</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="C:\Users\dilip\OneDrive\Desktop\part 2\images\Screenshot 2023-10-12 012627.png">
+			<img src="Screenshot 2023-10-12 012627.png">
 				<h2>guitar<br>$500</h2>
 			<h3>Add to cart </h3>
 		</div>
@@ -130,7 +130,7 @@
 
 <section id="footer">
 	<h2>@             DILIP  </h2>
-	<img src="images/icon.png"  > 
+	<img src="icon.png"  > 
 </section>
 
 
