--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
-			<img src="s1.jpg">
-				<h2>!!!!1<br>$129.99</h2>
+			<img src="91d8e019-c815-424b-908a-4eb8ed87a6b5.jpg">
+				<h2>Kediya<br>$129.99</h2>
 			<h3>Add to cart </h3>
 		</div>
 		<div class="man-box">
